Fix tables aligning center shortening width

--- a/src/app/modules/pages/budget/expenses/expenses.component.scss
+++ b/src/app/modules/pages/budget/expenses/expenses.component.scss
@@ -1,7 +1,6 @@
 .expenses {
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin: var(--space-xs) 0;
 
   &__btns {
