--- a/src/app/modules/pages/overview/overview.component.scss
+++ b/src/app/modules/pages/overview/overview.component.scss
@@ -62,6 +62,6 @@
 
 .upcoming {
   padding: var(--space-med) 0;
-  width: inherit !important;
+  width: 100%;
 }
 
