--- a/src/app/modules/shared/components/table/table.component.scss
+++ b/src/app/modules/shared/components/table/table.component.scss
@@ -5,7 +5,6 @@
   border-radius: var(--br-med);
   box-shadow: var(--bs-secondary);
   overflow: hidden;
-  border: 2px solid green;
 
   & > * {
     display: grid;
@@ -34,7 +33,6 @@
   & > app-table-row {
     width: 100%;
     min-height: 3rem;
-    border: 1px solid red;
   }
 
   & > app-table-row:nth-of-type(even) {
